--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="header text-center">
       <h1>Twith tv json api</h1>
-      <h2>Free Code Camp</h2>
+
       <a href="https://crossorig.in/https://wind-bow.gomix.me/twitch-api/streams/freecodecamp" target="_blank">
-        <h3 id="fccStatus"></h3>
+        <h3 id="fccStatus"><h2>Free Code Camp</h2></h3>
       </a>
     </div>
     <div class="row">
@@ -32,6 +32,15 @@
 
     </div>
     <div id="followerInfo"></div>
+  </div> -->
+
+  <div class="container">
+    <h1>Twitch tv API</h1>
+    <div class="row channels">
+      <div class="col-md-4">logo</div>
+      <div class="col-md-4">canal</div>
+      <div class="col-md-4">estado</div>
+    </div>
   </div>
 
 
