--- a/index.html
+++ b/index.html
@@ -34,12 +34,21 @@
     <div id="followerInfo"></div>
   </div> -->
 
-  <div class="container">
+  <div class="container pest">
     <h1>Twitch tv API</h1>
+    <div class="container ">
+      <div>All</div>
+      <div>Online</div>
+      <div>Offline</div>
+    </div>
     <div class="row channels">
-      <div class="col-md-4">logo</div>
-      <div class="col-md-4">canal</div>
-      <div class="col-md-4">estado</div>
+
+      <!-- <div>
+        <div class="col-md-4">logo</div>
+        <div class="col-md-4">canal</div>
+        <div class="col-md-4">estado</div>
+      </div> -->
+
     </div>
   </div>
 
