--- a/index.html
+++ b/index.html
@@ -10,29 +10,12 @@
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
 
-  <!-- <div class="container">
-    <div class="header text-center">
-      <h1>Twith tv json api</h1>
 
-      <a href="https://crossorig.in/https://wind-bow.gomix.me/twitch-api/streams/freecodecamp" target="_blank">
-        <h3 id="fccStatus"><h2>Free Code Camp</h2></h3>
-      </a>
-    </div>
-    <div class="row">
-      <h2>
-        <div class="col-md-4">Logo</div>
-        <div class="col-md-4">Display Name</div>
-        <div class="col-md-4">Status</div>
-      </h2>
-
-    </div>
-    <div id="followerInfo"></div>
-  </div> -->
 
   <div class="container pest">
     <h1>Twitch tv API</h1>
@@ -41,15 +24,23 @@
       <div>Online</div>
       <div>Offline</div>
     </div>
-    <div class="row channels">
 
-      <!-- <div>
-        <div class="col-md-4">logo</div>
-        <div class="col-md-4">canal</div>
-        <div class="col-md-4">estado</div>
-      </div> -->
-
+    <!-- <ul>
+        <li><img src="img/taza.jpg" alt=""></li>
+        <li>titulo del canal</li>
+        <li>estado</li>
+      </ul> -->
+    <div class="channel">
+      <img src="img/taza.jpg" alt="">
+      <h3>titulo del canal</h3>
+      <span>Aca va el estado</span>
     </div>
+
+    <!-- <div class="col-md-4"><img src="img/taza.jpg" alt=""></div>
+      <div class="col-md-4">Aca ponemos el titulo </div>
+      <div class="col-md-4">Tiramos lo que estan dando en el canal</div> -->
+
+
   </div>
 
 
