--- a/index.html
+++ b/index.html
@@ -15,30 +15,35 @@
 
 <body>
 
+  <div class="page container-fluid">
+    <div class="spacer"></div>
+    <div class="block text-center">
+      <h1>Twitch TV JSON API</h1>
+      <a href="http://www.twitch.tv/freecodecamp" target="blank"><h2>freeCodeCamp<span id="fcc"> ...</span></h2></a>
+    </div>
 
-
-  <div class="container pest">
-    <h1>Twitch tv API</h1>
-    <div class="container ">
+  <div class="container ">
+  
+    <!-- <div class="container ">
       <div>All</div>
       <div>Online</div>
       <div>Offline</div>
-    </div>
+    </div> -->
 
-    <!-- <ul>
+    <ul class="stateList">
+      <li>All</li>
+      <li class="green">Online</li>
+      <li class="red">Offline</li>
+    </ul>
+
+    <div class="channel">
+      <ul class="displ">
         <li><img src="img/taza.jpg" alt=""></li>
         <li>titulo del canal</li>
-        <li>estado</li>
-      </ul> -->
-    <div class="channel">
-      <img src="img/taza.jpg" alt="">
-      <h3>titulo del canal</h3>
-      <span>Aca va el estado</span>
+        <li> <span>Aca va el estado</span></li>
+      </ul> 
     </div>
 
-    <!-- <div class="col-md-4"><img src="img/taza.jpg" alt=""></div>
-      <div class="col-md-4">Aca ponemos el titulo </div>
-      <div class="col-md-4">Tiramos lo que estan dando en el canal</div> -->
 
 
   </div>
