Add fetch to get the data

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="http://www.twitch.tv/freecodecamp" target="blank"><h2>freeCodeCamp<span id="fcc"> ...</span></h2></a>
     </div>
 
-  <div class="container ">
+  <div class="container " id="display">
   
     <!-- <div class="container ">
       <div>All</div>
@@ -36,13 +36,13 @@
       <li class="red">Offline</li>
     </ul>
 
-    <div class="channel">
+    <!-- <div class="channel">
       <ul class="displ">
         <li><img src="img/taza.jpg" alt=""></li>
         <li>titulo del canal</li>
         <li> <span>Aca va el estado</span></li>
       </ul> 
-    </div>
+    </div> -->
 
 
 
