Add catch sentences, code improved

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <ul class="stateList">
       <li>All</li>
-      <li class="green">Online</li>
-      <li class="red">Offline</li>
+      <li class="green"><a href="">Online</a></li>
+      <li class="red"><a href="">Offline</a></li>
     </ul>
 
   </div>
