Add no-logo img and code inmprove

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Twitch Tv Api</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 
   <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -19,26 +21,35 @@
     <div class="spacer"></div>
     <div class="block text-center">
       <h1>Twitch TV JSON API</h1>
-      <a href="http://www.twitch.tv/freecodecamp" target="blank"><h2>freeCodeCamp<span id="fcc"> ...</span></h2></a>
+      <a href="http://www.twitch.tv/freecodecamp" target="blank">
+        <h2>freeCodeCamp
+          <span id="fcc"> ...</span>
+        </h2>
+      </a>
     </div>
 
-  <div class="container " id="display">
+    <div class="container " id="display">
 
-    <ul class="stateList">
-      <li>All</li>
-      <li class="green"><a href="">Online</a></li>
-      <li class="red"><a href="">Offline</a></li>
-    </ul>
+      <ul class="stateList">
+        <li>All</li>
+        <li class="green">
+          <a href="">Online</a>
+        </li>
+        <li class="red">
+          <a href="">Offline</a>
+        </li>
+      </ul>
 
-  </div>
+    </div>
 
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="js/index.js">
-  </script>
+    <script type="text/javascript" src="js/index.js">
+    </script>
 </body>
 
 </html>
