--- a/index.html
+++ b/index.html
@@ -16,40 +16,38 @@
 </head>
 
 <body>
+  <div class="block text-center">
+    <h1>Twitch TV JSON API</h1>
+    <a href="http://www.twitch.tv/freecodecamp" target="blank">
+      <h2>freeCodeCamp
+        <span id="fcc"> ...</span>
+      </h2>
+    </a>
 
-  <div class="page container-fluid">
-    <div class="spacer"></div>
-    <div class="block text-center">
-      <h1>Twitch TV JSON API</h1>
-      <a href="http://www.twitch.tv/freecodecamp" target="blank">
-        <h2>freeCodeCamp
-          <span id="fcc"> ...</span>
-        </h2>
-      </a>
-    </div>
+  </div>
 
-    <div class="container " id="display">
-
+  <div class="container board" id="display">
+    <div class="but">
       <ul class="stateList">
-        <li>All</li>
-        <li class="green">
-          <a href="">Online</a>
+        <li>
+          <a href="">All</a>
         </li>
-        <li class="red">
-          <a href="">Offline</a>
+        <li>
+          <label for="" class="ol">Online</label>
+        </li>
+        <li class="">
+          <label for="" class="ofl">Offline</label>
         </li>
       </ul>
-
     </div>
+  </div>
 
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-      crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="js/index.js">
-    </script>
+  <script type="text/javascript" src="js/index.js">
+  </script>
 </body>
 
 </html>
